# termapod

./: .nvimrc  LICENSE  README.md  apod.py  pyproject.toml  pyrightconfig.json
src/: apod.py
src/apod/: __init__.py  _version.py  apod.py
src/termapod/: termapod.py
