[build-system]
requires = [
	'setuptools>=64',
	'setuptools-scm>=8.0',
	'wheel'
]
build-backend = "setuptools.build_meta"

[project]
name = "apod"
dynamic = ["version"]
dependencies = [
	"pillow==10.3.0",
	"requests==2.31.0"
]
requires-python = ">=3.10"
authors = [
	{name = "Trevor Schrock", email = "spacemeat@gmail.com"},
]
maintainers = [
	{name = "Trevor Schrock", email = "spacemeat@gmail.com"},
]
description = "An ASCII block / ANSI color renderer for NASA's Astonomy Pic of the Day. For like no reason."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["astronomy", "NASA", "ASCII", "ANSI"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: End Users/Desktop",
	"Programming Language :: Python :: 3.10",
	"Environment :: Console",
	"License :: OSI Approved :: MIT License",
	"Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Repository = "https://github.com/spacemeat/apod.git"

[project.scripts]
apod="apod.apod:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = 'src/apod/_version.py'
